; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/gma500/extr_mdfld_dsi_output.c_mdfld_dsi_controller_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/gma500/extr_mdfld_dsi_output.c_mdfld_dsi_controller_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mdfld_dsi_config = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"Invalid parameters\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mdfld_dsi_controller_init(%struct.mdfld_dsi_config* %0, i32 %1) #0 {
  %3 = alloca %struct.mdfld_dsi_config*, align 8
  %4 = alloca i32, align 4
  store %struct.mdfld_dsi_config* %0, %struct.mdfld_dsi_config** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.mdfld_dsi_config*, %struct.mdfld_dsi_config** %3, align 8
  %6 = icmp ne %struct.mdfld_dsi_config* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %7
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 2
  br i1 %12, label %13, label %15

13:                                               ; preds = %10, %2
  %14 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  br label %19

15:                                               ; preds = %10, %7
  %16 = load %struct.mdfld_dsi_config*, %struct.mdfld_dsi_config** %3, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @mdfld_dsi_dpi_controller_init(%struct.mdfld_dsi_config* %16, i32 %17)
  br label %19

19:                                               ; preds = %15, %13
  ret void
}

declare dso_local i32 @DRM_ERROR(i8*) #1

declare dso_local i32 @mdfld_dsi_dpi_controller_init(%struct.mdfld_dsi_config*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
